# hipfire

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STATE_FIX_ANALYSIS.md  harness.sh  results.tsv
.githooks/: pre-commit
.serena/: project.yml
cli/: index.ts
docs/: BENCHMARKS.md  DELTANET.md  DFLASH_PROGRESS.md  MODELS.md  PERF_COMPARISON.md
magnum/: .gitignore  Cargo.toml
magnum/kernels/: bw_bench.hip  dp4a_bench.hip  magnum_butterfly.hip  magnum_dequant_g32.hip  magnum_fused_dequant.hip  turbo_attention_test.hip  turbo_roundtrip_test.hip
magnum/results/: full_results.md  gfx1100_long_gen_bug.md  magnum_butterfly_isa.s  magnum_dequant_g32_isa.s  magnum_fused_dequant_isa.s  phase1_isa_analysis.md
magnum/results/logit_dump_gfx1100/: generated_text.txt  logit_stats.csv  meta.txt  token_sequence.txt
magnum/results/logit_dump_gfx1100_600/: generated_text.txt  token_sequence.txt
magnum/results/turbo_diagnosis/: corruption_report.md  fix_proposal.md
magnum/results/turbo_validation/: performance.json  summary.md
magnum/results/turbo_validation/coherence/: baseline_combustion.txt  turbo4_combustion.txt
magnum/src/: bw_bench.rs  dp4a_bench.rs  main.rs  turbo_diag.rs
scripts/: bench-matrix.sh  bisect_9b_decode.sh  calibrate_multigpu.sh  coherence-gate.sh  compile-kernels.sh  dflash_cache_test.py  dflash_diag_iter1_tau.py  dflash_ref_spec_test.py  dflash_spec_debug.py  dflash_target_sanity.py  dflash_train_poc.py  fetch_calibration_corpus.sh  install.ps1  install.sh  logit_dump.sh  mi300_chain_runner.sh  (+4 more)
(+937 files in other folders)
